kubernetes/apps/tekton-pipelines/tekton/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    hajimari.io/appName: Tekton
    hajimari.io/icon: robot-industrial
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "tekton.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
